Undo rowGap fix

--- a/frontend/public/components/_dropdown.scss
+++ b/frontend/public/components/_dropdown.scss
@@ -57,7 +57,6 @@
     var(--pf-t--global--border--color--50);
   padding: 0 $pf-v6-global-gutter;
   white-space: nowrap;
-  @include row-gap-negation();
 
   @media (min-width: $pf-v6-global--breakpoint--xl) {
     padding-left: $pf-v6-global-gutter--md;
