--- a/frontend/public/components/_horizontal-nav.scss
+++ b/frontend/public/components/_horizontal-nav.scss
@@ -1,9 +1,5 @@
 $co-m-horizontal-nav__menu-item-link-padding-lr: $pf-v6-global-gutter;
 
-.co-m-horizontal-nav {
-  @include row-gap-negation();
-}
-
 .co-m-horizontal-nav__menu {
   border-bottom: var(--pf-t--global--border--width--100) solid
     var(--pf-t--global--border--color--50);
